Fix: DocSearch theme and section heading spacing (#3121)
- Use `localStorage` for setting DocSearch theme
- Remove unapplied font-weight nav styles
- Remove redundant inline style

--- a/assets/scss/components/_typography-improvements.scss
+++ b/assets/scss/components/_typography-improvements.scss
@@ -117,27 +117,6 @@ h4 {
   }
 }
 
-// Navigation and sidebar text - keeping original spacing
-.docs-sidebar,
-.leftnav,
-#sidebar-default {
-  // Remove font size override to keep original
-  
-  .nav-link,
-  a {
-    // Keep original padding and line-height
-    font-weight: 450;
-    
-    &:hover {
-      font-weight: 500;
-    }
-    
-    &.active {
-      font-weight: 600;
-    }
-  }
-}
-
 // Table improvements
 table {
   font-size: var(--docs-small-font);
